# airlfow_astro_cli

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
dags/: stock_market.py
include/helpers/: minio.py
include/stock_market/: tasks.py
spark/spark_transform/: Dockerfile  stock_transform.py
